fixed the bug related to z-index for the new-post div

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,6 @@ header img{
     justify-content: center;
     align-items: center;
     height: 90vh;
-    z-index: -9;
 }
 .grid{
     display: grid;
@@ -103,6 +102,7 @@ header img{
     background-color: #041E42;
     color: white;
     border: none;
+    z-index: 1;
 }
 
 .post{
@@ -114,7 +114,6 @@ header img{
     position: absolute;
     top: 10vh;
     left: 0;
-    z-index: -999;
 }
 
 .new-post{
